tests/paczka1/fuzzy1/25823069.err
Error in line 14: by3q S297 63,6
Error in line 16: by3q S657 23,0
Error in line 20: sMZg S857 16,6
Error in line 22: ooAxH S297 92,4
